--- a/src/code/ApiDestinationPOC/EventRuleDLQLambda/Properties/launchSettings.json
+++ b/src/code/ApiDestinationPOC/EventRuleDLQLambda/Properties/launchSettings.json
@@ -4,7 +4,11 @@
       "commandName": "Executable",
       "commandLineArgs": "--port 5050",
       "workingDirectory": ".\\bin\\$(Configuration)\\net6.0",
-      "executablePath": "%USERPROFILE%\\.dotnet\\tools\\dotnet-lambda-test-tool-6.0.exe"
+      "executablePath": "%USERPROFILE%\\.dotnet\\tools\\dotnet-lambda-test-tool-6.0.exe",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Local",
+        "ENVIRONMENT_NAME": "local"
+      }
     }
   }
 }
