--- a/src/code/ApiDestinationPOC/EventRuleLambda/EventRuleLambda.csproj
+++ b/src/code/ApiDestinationPOC/EventRuleLambda/EventRuleLambda.csproj
@@ -11,12 +11,30 @@
     <PublishReadyToRun>true</PublishReadyToRun>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="appsettings.Development.json" />
+    <None Remove="appsettings.json" />
+    <None Remove="appsettings.Local.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="appsettings.Local.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="2.2.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.0" />
     <PackageReference Include="Amazon.Lambda.SQSEvents" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AWSServiceWrapper.EventBridge\AWSServiceWrapper.EventBridge.csproj" />
+    <ProjectReference Include="..\Helper.Startup\Helper.Startup.csproj" />
     <ProjectReference Include="..\TestServiceLayer.Shared\TestServiceLayer.Shared.csproj" />
     <ProjectReference Include="..\TestServiceLayer\TestServiceLayer.csproj" />
   </ItemGroup>
