--- a/src/code/ApiDestinationPOC/ExternalApi/ExternalApi.csproj
+++ b/src/code/ApiDestinationPOC/ExternalApi/ExternalApi.csproj
@@ -12,9 +12,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.6.1" />
+	<PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.300" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Helper.Startup\Helper.Startup.csproj" />
     <ProjectReference Include="..\TestServiceLayer.Shared\TestServiceLayer.Shared.csproj" />
     <ProjectReference Include="..\TestServiceLayer\TestServiceLayer.csproj" />
   </ItemGroup>
