chore: script updates

--- a/src/code/ApiDestinationPOC/EventRuleLambda/appsettings.Development.json
+++ b/src/code/ApiDestinationPOC/EventRuleLambda/appsettings.Development.json
@@ -3,5 +3,9 @@
     "LogLevel": {
       "Default": "Information"
     }
+  },
+  "EventRuleSettings": {
+    "EventSource": "EventRuleSource",
+    "EventDetailType": "EventRuleDetailType"
   }
 }
