chore: push config tweak

--- a/src/code/ApiDestinationPOC/EventRuleLambda/appsettings.Development.json
+++ b/src/code/ApiDestinationPOC/EventRuleLambda/appsettings.Development.json
@@ -6,6 +6,7 @@
   },
   "EventRuleSettings": {
     "EventSource": "EventRuleSource",
-    "EventDetailType": "EventRuleDetailType"
+    "EventDetailType": "EventRuleDetailType",
+    "EventBusName": "PocCdkStackdevEventRulePOCEventBusdev45CAF098"
   }
 }
