--- a/src/code/ApiDestinationPOC/EventRuleLambda/Properties/launchSettings.json
+++ b/src/code/ApiDestinationPOC/EventRuleLambda/Properties/launchSettings.json
@@ -6,8 +6,8 @@
       "workingDirectory": ".\\bin\\$(Configuration)\\net6.0",
       "executablePath": "%USERPROFILE%\\.dotnet\\tools\\dotnet-lambda-test-tool-6.0.exe",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Local",
-        "ENVIRONMENT_NAME": "local"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ENVIRONMENT_NAME": "dev"
       }
     }
   }
