--- a/src/code/FailedMessageProcessorPOC/EventRuleDLQLambda/appsettings.Local.json
+++ b/src/code/FailedMessageProcessorPOC/EventRuleDLQLambda/appsettings.Local.json
@@ -4,6 +4,10 @@
             "Default": "Information"
         }
     },
+    "QueueSettings": {
+        "QueueName": "QueueARN",
+        "BatchSize" : "1000"
+    },
     "EventRuleSettings": {
         "EventSource": "EventRuleSource",
         "EventDetailType": "EventRuleDetailType",
