--- a/src/code/FailedMessageProcessorPOC/FailedMessageProcessorLambda/appsettings.Development.json
+++ b/src/code/FailedMessageProcessorPOC/FailedMessageProcessorLambda/appsettings.Development.json
@@ -4,13 +4,9 @@
             "Default": "Information"
         }
     },
-    "QueueSettings": {
-        "QueueName": "QueueARN",
-        "BatchSize": "1000"
-    },
     "EventRuleSettings": {
         "EventSource": "EventRuleSource",
         "EventDetailType": "EventRuleDetailType",
-        "EventBusName": "EventBusNameLocal"
+        "EventBusName": "EventBusNameDevelopment"
     }
 }
