--- a/src/code/FailedMessageProcessorPOC/FailedMessageProcessorLambda/appsettings.Local.json
+++ b/src/code/FailedMessageProcessorPOC/FailedMessageProcessorLambda/appsettings.Local.json
@@ -8,5 +8,9 @@
     "EventSource": "TestEventSource",
     "EventDetailType": "PolicyCreated",
     "EventBusName": "EventBridgeCdkStacklocalPolicyCreatedEventBuslocal97FBD8D6"
+  },
+  "DLQSettings": {
+    "QueueName": "https://sqs.ap-southeast-2.amazonaws.com/301804962855/PolicyCreatedFailureQueuelocal",
+    "BatchSize": 100
   }
 }
